Added handling for different media types